# WeatherDashboard

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml
src/: app.py
src/WeatherDashboard/: app.py
src/WeatherDashboard.egg-info/: PKG-INFO  SOURCES.txt
src/WeatherDashboard/routes/: weather_routes.py
src/WeatherDashboard/services/: http_cats_service.py  weather_service.py
src/WeatherDashboard/utils/: error_handlers.py  validators.py
src/routes/: weather_routes.py
src/services/: weather_service.py
src/utils/: error_handlers.py
src/weather_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_routes.py  test_validators.py  test_weather_service.py
