[project]
name = "weather-dashboard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "requests"
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
